# Kompas3DPrint

./: .gitignore  AboutDlg.cpp  AboutDlg.h  ApplicationEvent.cpp  ApplicationEvent.h  BaseEvent.cpp  BaseEvent.h  CMakeLists.txt  DocumentEvent.cpp  DocumentEvent.h  Kompas3DPrint-Base.sfd  Kompas3DPrint.cpp  Kompas3DPrint.def  Kompas3DPrint.h  Kompas3DPrint.rc  SettingsData.cpp  SettingsData.h  SettingsDlg.cpp  SettingsDlg.h  StdAfx.h  iniFile.cpp  iniFile.h  resource.h
res/: Kompas3DPrint.rc2
